tests/rustdoc-ui/invalid-keyword.rs
#![feature(rustdoc_internals)]

#[doc(keyword = "foo df")] //~ ERROR
mod foo {}
